Bug 148719 - Moving an caption frame multiple times & undoing the movement is shrinking caption frame
Summary: Moving an caption frame multiple times & undoing the movement is shrinking ca...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
: 147312 (view as bug list)
Depends on:
Blocks: Textbox Undo-Redo
  Show dependency treegraph
 
Reported: 2022-04-22 08:35 UTC by Telesto
Modified: 2024-05-17 02:45 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
patch to revert (4.73 KB, patch)
2022-11-03 13:02 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-04-22 08:35:53 UTC
Description:
Moving an caption frame multiple times & undoing the movement is shrinking caption frame

Steps to Reproduce:
1. Open the attachment 164237 [details] 
2. drag the image frame it out of the table
3. Move it another 2 or 3 times by drag and drop (say by 1 or 2 cm)
4. Press CTRL+Z multiple times

Actual Results:
Caption frame 

Expected Results:
Stable caption frame size


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4659fc2f0a7223a89446edff0b77e58758b5edf5
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-US
Calc: CL Jumbo

also in
7.3

not in
Version: 7.2.1.0.0+ (x64) / LibreOffice Community
Build ID: 8fdbb8aed1b48734a717d5f98ada566de7204605
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Ezinne 2022-04-29 12:35:59 UTC
Reproducible in:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 5453f75a1e682992f3a725781bb563b8cc76cf1b
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 raal 2022-11-01 20:37:09 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara; Could you possibly take a look at this one?
Thanks
 79509cd77f9ab99f88a7d61cd956f6558f836da7 is the first bad commit
commit 79509cd77f9ab99f88a7d61cd956f6558f836da7
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Aug 18 19:51:30 2022 +0200

    source 64fbd90158f5248636490237e23325c90683d9be

https://git.libreoffice.org/core/+/64fbd90158f5248636490237e23325c90683d9be
Comment 3 Caolán McNamara 2022-11-01 21:37:36 UTC
That commit on the face of things looks to affect only calc, while the report here is about writer. Maybe there is some variability in reproducibility or its some commit near the identified one, or of course maybe there is some link between these things after all
Comment 4 raal 2022-11-01 21:46:31 UTC
(In reply to Caolán McNamara from comment #3)
> That commit on the face of things looks to affect only calc, while the
> report here is about writer. Maybe there is some variability in
> reproducibility or its some commit near the identified one, or of course
> maybe there is some link between these things after all

Agree, looks like not relevant commit, but I always check the bibisect results:
git checkout commit -> bug is here
git checkout HEAD~1 -> bug is not here

still I can do a mistake, of course..
Comment 5 Caolán McNamara 2022-11-03 13:01:18 UTC
my bibisect effort suggests:

commit 1feb59c3dd9e5f714ce894f8de31bbb6869c9f3b
Date:   Tue Jun 22 22:39:27 2021 +0200

    optimised FindFormatByName for SwFrameFormats

and a revert (attached) seems to make it work again.
Comment 6 Caolán McNamara 2022-11-03 13:02:06 UTC
Created attachment 183390 [details]
patch to revert
Comment 7 Noel Grandin 2022-11-07 11:19:06 UTC
fix at https://gerrit.libreoffice.org/c/core/+/142371
Comment 8 Commit Notification 2022-11-07 12:53:12 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/24122c202149761121ffde6788d1b28b6f3ca8f1

tdf#148719 Moving caption frame & undoing is shrinking caption frame

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 stragu 2024-05-17 02:45:56 UTC
*** Bug 147312 has been marked as a duplicate of this bug. ***